@@ -20,6 +20,8 @@
 
   - New style for buttons
 
+  - New style for alerts
+
 - New Palette based on a work by Tobias Bernard for the Fractal application
 
   - Color that aren't based on semantics
